--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -112,7 +112,7 @@ jobs:
       run: ./gradlew :desktopApp:build --no-daemon
 
     - name: Run Desktop tests
-      run: ./gradlew :desktopApp:desktopTest --no-daemon
+      run: ./gradlew :common:desktopTest --no-daemon
       continue-on-error: true
 
     - name: Upload Desktop test results
@@ -120,8 +120,71 @@ jobs:
       if: always()
       with:
         name: test-results-desktop
-        path: desktopApp/build/reports/tests/
+        path: common/build/reports/tests/desktopTest/
         retention-days: 7
+
+  # ============================================
+  # iOS Build (macOS runner required)
+  # ============================================
+  ios:
+    name: iOS Build
+    runs-on: macos-latest
+    needs: build
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up JDK ${{ env.JAVA_VERSION }}
+      uses: actions/setup-java@v4
+      with:
+        java-version: ${{ env.JAVA_VERSION }}
+        distribution: 'temurin'
+        cache: gradle
+
+    - name: Build iOS Framework
+      run: ./gradlew :common:linkDebugFrameworkIosArm64 --no-daemon
+
+    - name: Upload iOS Framework
+      uses: actions/upload-artifact@v4
+      with:
+        name: ios-debug-framework
+        path: common/build/bin/iosArm64/debugFramework/
+        retention-days: 7
+
+  # ============================================
+  # Web/JS Build
+  # ============================================
+  web:
+    name: Web Build
+    runs-on: ubuntu-latest
+    needs: build
+    
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+
+    - name: Set up JDK ${{ env.JAVA_VERSION }}
+      uses: actions/setup-java@v4
+      with:
+        java-version: ${{ env.JAVA_VERSION }}
+        distribution: 'temurin'
+        cache: gradle
+
+    - name: Build Web/JS
+      run: ./gradlew :common:compileKotlinJs --no-daemon
+
+    - name: Run JS Tests
+      run: ./gradlew :common:jsBrowserTest --no-daemon
+      continue-on-error: true
+
+    - name: Upload JS Artifacts
+      uses: actions/upload-artifact@v4
+      with:
+        name: web-js-build
+        path: common/build/compileSync/js/
+        retention-days: 7
+
 
   # ============================================
   # Code Quality Checks
@@ -211,7 +274,7 @@ jobs:
   release:
     name: Release Build
     runs-on: ubuntu-latest
-    needs: [build, android, desktop, lint]
+    needs: [build, android, desktop, ios, web, lint]
     if: startsWith(github.ref, 'refs/tags/v')
     
     steps:
