--- a/gradle.properties
+++ b/gradle.properties
@@ -6,6 +6,7 @@ org.gradle.caching=true
 # Kotlin
 kotlin.code.style=official
 kotlin.mpp.stability.nowarn=true
+kotlin.mpp.applyDefaultHierarchyTemplate=false
 
 # Android
 android.useAndroidX=true
@@ -13,3 +14,4 @@ android.nonTransitiveRClass=true
 
 # Compose
 org.jetbrains.compose.experimental.uikit.enabled=true
+org.jetbrains.compose.experimental.jscanvas.enabled=true
