📱 iOS 26: Complete app upgrade to Liquid Glass
## Full iOS 26 Upgrade (December 2025)

All Swift files now use iOS 26 / Xcode 26 patterns:

### HistoryView.swift
- @Observable ViewModel (replaces ObservableObject)
- MeshGradient.liquidGlassBackground
- Glass filter chips with sensory feedback
- Glass history rows with score badges
- Symbol effects on empty state

### SettingsView.swift
- Custom SettingsToggle with symbol effects
- 'Reduce Liquid Glass' setting
- iOS 26 badge in credits
- MeshGradient background

### OnboardingView.swift
- 4th page about Liquid Glass design
- Glass icon containers with outer glow
- Capsule page indicators
- Enhanced transitions

### DetailSheet.swift
- ShareLink (iOS 15+)
- Score breakdown with glass styling
- URL details with textSelection
- Liquid Glass buttons

### ResultCard.swift
- ultraThinMaterial background
- Gradient borders with theme color
- Animated score bar
- Expandable flags

### QRShieldApp.swift
- Transparent nav/tab bars
- UIBlurEffect integration
- Liquid Glass system styling

### Info.plist
- MinimumOSVersion: 26.0
- UIObservationTrackingEnabled: true
- Privacy manifest entries
- Build version: 26

--- a/iosApp/QRShield/Info.plist
+++ b/iosApp/QRShield/Info.plist
@@ -20,7 +20,11 @@
     <key>CFBundleShortVersionString</key>
     <string>1.0.0</string>
     <key>CFBundleVersion</key>
-    <string>1</string>
+    <string>26</string>
+    
+    <!-- iOS 26 Minimum Deployment -->
+    <key>MinimumOSVersion</key>
+    <string>26.0</string>
     
     <!-- Launch Configuration -->
     <key>LSRequiresIPhoneOS</key>
@@ -52,6 +56,14 @@
     <key>NSPhotoLibraryUsageDescription</key>
     <string>QR-SHIELD needs photo library access to scan QR codes from saved images.</string>
     
+    <!-- iOS 26: Privacy Manifest Requirements -->
+    <key>NSPrivacyTracking</key>
+    <false/>
+    <key>NSPrivacyTrackingUsageDescription</key>
+    <string>QR-SHIELD does not track users.</string>
+    <key>NSPrivacyCollectedDataTypes</key>
+    <array/>
+    
     <!-- App Transport Security -->
     <key>NSAppTransportSecurity</key>
     <dict>
@@ -71,7 +83,13 @@
     <key>UIViewControllerBasedStatusBarAppearance</key>
     <true/>
     
-    <!-- App Background Modes (none needed) -->
+    <!-- iOS 26: Liquid Glass Support -->
+    <key>UIUserInterfaceStyle</key>
+    <string>Dark</string>
+    
+    <!-- iOS 26: Observable in UIKit (backport enabled) -->
+    <key>UIObservationTrackingEnabled</key>
+    <true/>
     
 </dict>
 </plist>
