--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -44,6 +44,7 @@ sqldelight-coroutines = { module = "app.cash.sqldelight:coroutines-extensions", 
 # Koin
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-android = { module = "io.insert-koin:koin-android", version.ref = "koin" }
+koin-compose = { module = "io.insert-koin:koin-androidx-compose", version.ref = "koin" }
 
 # Android specific
 mlkit-barcode = { module = "com.google.mlkit:barcode-scanning", version = "17.2.0" }
