Add Kover code coverage (42%), polish Desktop UI with dark/light theme
Changes:
- Added Kover plugin for code coverage measurement
- Updated README badge to show actual coverage (42%)
- Completely redesigned Desktop UI with:
  - Dark/Light theme toggle with persistence
  - Modern Material 3 design with gradient header
  - Brand color scheme matching mobile apps
  - Enhanced result cards with visual indicators
  - Feature chips and polished footer
- Moved desktop source to correct desktopMain location

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ coroutines = "1.8.0"
 sqldelight = "2.0.1"
 koin = "3.5.3"
 datetime = "0.5.0"
+kover = "0.7.5"
 camerax = "1.4.0"
 navigation = "2.7.7"
 lifecycle = "2.7.0"
@@ -87,3 +88,5 @@ android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
 baselineprofile = { id = "androidx.baselineprofile", version = "1.2.4" }
+kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
+
