Add release infrastructure: signed APK build, GitHub Actions workflows, download badges
- Add release.yml workflow for multi-platform release builds
- Update ci.yml with signed APK building capability
- Add download badges to README (Android APK, Desktop JAR, Web Demo)
- Mark iOS as 'Coming Soon' (no Apple Developer account yet)
- Configure GitHub Secrets for Android signing
- Add keystore.properties.template with setup instructions
- Add TestFlight setup guide for future iOS distribution
- Add ExportOptions.plist for iOS builds

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -344,7 +344,7 @@ jobs:
           | Platform | Download | Requirements |
           |----------|----------|--------------|
           | **Android** | [📱 Download APK](https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/QRShield-${{ steps.get_version.outputs.version }}-release.apk) | Android 8.0+ (API 26) |
-          | **iOS** | [🍎 TestFlight Beta](https://testflight.apple.com/join/XXXXXXXX) | iOS 17.0+ |
+          | **iOS** | 🍎 Coming Soon | iOS 17.0+ |
           | **Desktop** | [🖥️ Download JAR](https://github.com/${{ github.repository }}/releases/download/${{ github.ref_name }}/QRShield-${{ steps.get_version.outputs.version }}-desktop.jar) | JRE 17+ |
           | **Web** | [🌐 Try Online](https://raoof128.github.io/QDKMP-KotlinConf-2026-/) | Modern browser |
           
@@ -353,8 +353,6 @@ jobs:
           ### 🚀 Installation
           
           **Android:** Download the APK and enable "Install from unknown sources" in Settings.
-          
-          **iOS:** Install TestFlight from App Store, then click the TestFlight link above.
           
           **Desktop:** Run with `java -jar QRShield-${{ steps.get_version.outputs.version }}-desktop.jar`
           
