--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -230,7 +230,7 @@ jobs:
           | Platform | Download | Requirements |
           |----------|----------|--------------|
           | **Android** | [`QRShield-${{ steps.get_version.outputs.version }}-release.apk`](https://github.com/${{ github.repository }}/releases/download/v${{ steps.get_version.outputs.version }}/QRShield-${{ steps.get_version.outputs.version }}-release.apk) | Android 8.0+ (API 26) |
-          | **iOS** | [TestFlight Beta](https://testflight.apple.com/join/XXXXXXXX) | iOS 17.0+ |
+          | **iOS** | 🍎 Coming Soon | iOS 17.0+ |
           | **Desktop (Linux)** | `QRShield-${{ steps.get_version.outputs.version }}-linux.jar` | JRE 17+ |
           | **Desktop (macOS)** | `QRShield-${{ steps.get_version.outputs.version }}-macos.jar` | JRE 17+ |
           | **Desktop (Windows)** | `QRShield-${{ steps.get_version.outputs.version }}-windows.jar` | JRE 17+ |
@@ -244,12 +244,6 @@ jobs:
           1. Download `QRShield-${{ steps.get_version.outputs.version }}-release.apk`
           2. Enable "Install from unknown sources" in Settings
           3. Open the APK file to install
-          
-          #### iOS (TestFlight)
-          1. Install TestFlight from the App Store
-          2. Click the TestFlight link above
-          3. Accept the beta invitation
-          4. Install QR-SHIELD from TestFlight
           
           #### Desktop
           ```bash
