--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -230,7 +230,7 @@ jobs:
           | Platform | Download | Requirements |
           |----------|----------|--------------|
           | **Android** | [`QRShield-${{ steps.get_version.outputs.version }}-release.apk`](https://github.com/${{ github.repository }}/releases/download/v${{ steps.get_version.outputs.version }}/QRShield-${{ steps.get_version.outputs.version }}-release.apk) | Android 8.0+ (API 26) |
-          | **iOS** | 🍎 Coming Soon | iOS 17.0+ |
+          | **iOS** | [🍎 Use Web App](https://raoof128.github.io/QDKMP-KotlinConf-2026-/) | Safari + Add to Home Screen |
           | **Desktop (Linux)** | `QRShield-${{ steps.get_version.outputs.version }}-linux.jar` | JRE 17+ |
           | **Desktop (macOS)** | `QRShield-${{ steps.get_version.outputs.version }}-macos.jar` | JRE 17+ |
           | **Desktop (Windows)** | `QRShield-${{ steps.get_version.outputs.version }}-windows.jar` | JRE 17+ |
