Polish: Clean up build warnings + Update CHANGELOG
BUILD WARNINGS (Task 18):
- Added -Xexpect-actual-classes compiler flag to suppress Beta warnings
- Added kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
- Remaining forUseAtConfigurationTime warning is from Gradle plugins (not our code)

CHANGELOG (Task 19):
- Added version 1.1.0 with all recent features:
  * Native iOS SwiftUI integration
  * 4 new language localizations (pt, ko, it, ru)
  * 20+ accessibility content descriptions
  * Package organization (orchestration/, analysis/)
  * Performance benchmark tests
  * Comprehensive KDoc documentation
- Updated version 1.0.0 with full feature list
- Added version 0.1.0 for initial release
- Fixed release links to point to correct GitHub repo

--- a/gradle.properties
+++ b/gradle.properties
@@ -9,6 +9,7 @@ org.gradle.configuration-cache.problems=warn
 kotlin.code.style=official
 kotlin.mpp.stability.nowarn=true
 kotlin.mpp.applyDefaultHierarchyTemplate=false
+kotlin.mpp.androidGradlePluginCompatibility.nowarn=true
 
 # Android
 android.useAndroidX=true
