--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,9 +11,14 @@ env:
   JAVA_VERSION: '17'
   GRADLE_OPTS: -Dorg.gradle.daemon=false -Dorg.gradle.parallel=true
 
+# Concurrency: Cancel in-progress runs for the same PR/branch
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
+  cancel-in-progress: true
+
 jobs:
   # ============================================
-  # Build & Test Common Module
+  # Build & Test Common Module (with Coverage)
   # ============================================
   build:
     name: Build & Test Common
@@ -36,8 +41,8 @@ jobs:
     - name: Build common module
       run: ./gradlew :common:build --no-daemon
 
-    - name: Run unit tests
-      run: ./gradlew :common:allTests --no-daemon
+    - name: Run unit tests with coverage
+      run: ./gradlew :common:allTests :common:koverXmlReport --no-daemon
 
     - name: Upload test results
       uses: actions/upload-artifact@v4
@@ -47,7 +52,38 @@ jobs:
         path: |
           common/build/reports/tests/
           common/build/test-results/
-        retention-days: 7
+        retention-days: 30
+
+    - name: Upload coverage report
+      uses: actions/upload-artifact@v4
+      if: always()
+      with:
+        name: coverage-report
+        path: |
+          common/build/reports/kover/
+        retention-days: 30
+
+    # Test Results Summary on PR
+    - name: Test Results Summary
+      uses: dorny/test-reporter@v1
+      if: always() && (github.event_name == 'pull_request' || github.event_name == 'push')
+      with:
+        name: 'Common Module Tests'
+        path: 'common/build/test-results/**/TEST-*.xml'
+        reporter: 'java-junit'
+        fail-on-error: false
+
+    # Coverage Summary Comment on PR
+    - name: Add Coverage Report to PR
+      if: github.event_name == 'pull_request'
+      uses: mi-kas/kover-report@v1
+      with:
+        path: common/build/reports/kover/report.xml
+        token: ${{ secrets.GITHUB_TOKEN }}
+        title: 'Code Coverage'
+        update-comment: true
+        min-coverage-overall: 50
+        min-coverage-changed-files: 60
 
   # ============================================
   # Android Build & Test
@@ -79,15 +115,27 @@ jobs:
       with:
         name: android-debug-apk
         path: androidApp/build/outputs/apk/debug/*.apk
-        retention-days: 7
+        retention-days: 30
 
     - name: Upload Android test results
       uses: actions/upload-artifact@v4
       if: always()
       with:
         name: test-results-android
-        path: androidApp/build/reports/tests/
-        retention-days: 7
+        path: |
+          androidApp/build/reports/tests/
+          androidApp/build/test-results/
+        retention-days: 30
+
+    # Test Results Summary
+    - name: Android Test Results Summary
+      uses: dorny/test-reporter@v1
+      if: always() && (github.event_name == 'pull_request' || github.event_name == 'push')
+      with:
+        name: 'Android Unit Tests'
+        path: 'androidApp/build/test-results/**/TEST-*.xml'
+        reporter: 'java-junit'
+        fail-on-error: false
 
   # ============================================
   # Desktop Build & Test
@@ -120,8 +168,20 @@ jobs:
       if: always()
       with:
         name: test-results-desktop
-        path: common/build/reports/tests/desktopTest/
-        retention-days: 7
+        path: |
+          common/build/reports/tests/desktopTest/
+          common/build/test-results/desktopTest/
+        retention-days: 30
+
+    # Test Results Summary
+    - name: Desktop Test Results Summary
+      uses: dorny/test-reporter@v1
+      if: always() && (github.event_name == 'pull_request' || github.event_name == 'push')
+      with:
+        name: 'Desktop Tests'
+        path: 'common/build/test-results/desktopTest/TEST-*.xml'
+        reporter: 'java-junit'
+        fail-on-error: false
 
   # ============================================
   # iOS Build (macOS runner required)
@@ -150,7 +210,7 @@ jobs:
       with:
         name: ios-debug-framework
         path: common/build/bin/iosArm64/debugFramework/
-        retention-days: 7
+        retention-days: 30
 
   # ============================================
   # Web/JS Build
@@ -181,7 +241,7 @@ jobs:
       with:
         name: web-js-build
         path: common/build/compileSync/js/
-        retention-days: 7
+        retention-days: 30
 
 
   # ============================================
@@ -212,7 +272,7 @@ jobs:
       with:
         name: detekt-report
         path: build/reports/detekt/
-        retention-days: 7
+        retention-days: 30
 
   # ============================================
   # Security Scan
@@ -265,6 +325,82 @@ jobs:
     - name: Check for dependency updates
       run: ./gradlew dependencyUpdates --no-daemon || true
       continue-on-error: true
+
+  # ============================================
+  # CI Summary Report
+  # ============================================
+  ci-summary:
+    name: CI Summary
+    runs-on: ubuntu-latest
+    needs: [build, android, desktop, ios, web, lint]
+    if: always()
+    
+    steps:
+    - name: Download all test results
+      uses: actions/download-artifact@v4
+      with:
+        pattern: test-results-*
+        path: all-test-results
+        merge-multiple: true
+
+    - name: Download coverage report
+      uses: actions/download-artifact@v4
+      with:
+        name: coverage-report
+        path: coverage
+      continue-on-error: true
+
+    - name: Create CI Summary
+      uses: actions/github-script@v7
+      if: github.event_name == 'pull_request'
+      with:
+        script: |
+          const fs = require('fs');
+          
+          // Build summary
+          let summary = `## 🛡️ QR-SHIELD CI Summary\n\n`;
+          summary += `| Job | Status |\n`;
+          summary += `|-----|--------|\n`;
+          summary += `| Build & Test Common | ${{ needs.build.result == 'success' && '✅ Passed' || '❌ Failed' }} |\n`;
+          summary += `| Android Build | ${{ needs.android.result == 'success' && '✅ Passed' || '❌ Failed' }} |\n`;
+          summary += `| Desktop Build | ${{ needs.desktop.result == 'success' && '✅ Passed' || '❌ Failed' }} |\n`;
+          summary += `| iOS Build | ${{ needs.ios.result == 'success' && '✅ Passed' || '❌ Failed' }} |\n`;
+          summary += `| Web Build | ${{ needs.web.result == 'success' && '✅ Passed' || '❌ Failed' }} |\n`;
+          summary += `| Code Quality | ${{ needs.lint.result == 'success' && '✅ Passed' || '⚠️ Check' }} |\n`;
+          summary += `\n---\n`;
+          summary += `\n📊 **Test reports and coverage results are available in the workflow artifacts.**\n`;
+          
+          // Find existing comment to update
+          const { data: comments } = await github.rest.issues.listComments({
+            owner: context.repo.owner,
+            repo: context.repo.repo,
+            issue_number: context.issue.number,
+          });
+          
+          const botComment = comments.find(c => c.user.type === 'Bot' && c.body.includes('QR-SHIELD CI Summary'));
+          
+          if (botComment) {
+            await github.rest.issues.updateComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              comment_id: botComment.id,
+              body: summary,
+            });
+          } else {
+            await github.rest.issues.createComment({
+              owner: context.repo.owner,
+              repo: context.repo.repo,
+              issue_number: context.issue.number,
+              body: summary,
+            });
+          }
+
+    - name: Upload consolidated test reports
+      uses: actions/upload-artifact@v4
+      with:
+        name: all-test-reports
+        path: all-test-results/
+        retention-days: 90
 
   # ============================================
   # Release Build (on tag)
@@ -366,4 +502,3 @@ jobs:
           - 🌍 Cross-platform (Android, iOS, Desktop, Web)
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
