📊 Add benchmarks, accuracy checks, and Detekt enforcement
D3. Benchmark + Results Table:
- Performance stats per platform (Android, iOS, Desktop, Web)
- Component benchmarks (Full analysis, Heuristics, ML, Brand, TLD)
- Memory footprint estimates
- Offline success rate (100%)

Accuracy Sanity Checks:
- Detection accuracy by category (Safe, Phishing, Brand, Homograph)
- False positive examples (major safe sites)
- True positive examples (real attack patterns)
- Known edge cases documentation

E1. Code Quality (Detekt):
- Enabled Detekt plugin in build.gradle.kts
- Configured source sets for all modules
- CI now FAILS on style violations
- 627-line detekt.yml with strict rules

Updated version to 1.1.1

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -275,7 +275,7 @@ jobs:
 
     - name: Run Detekt static analysis
       run: ./gradlew detekt --no-daemon
-      continue-on-error: true
+      # CI will FAIL if detekt finds style violations
 
     - name: Upload Detekt report
       uses: actions/upload-artifact@v4
