--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -8,6 +8,7 @@ sqldelight = "2.0.1"
 koin = "3.5.3"
 datetime = "0.5.0"
 kover = "0.7.5"
+dokka = "1.9.10"
 camerax = "1.4.0"
 navigation = "2.7.7"
 lifecycle = "2.7.0"
@@ -89,4 +90,5 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 sqldelight = { id = "app.cash.sqldelight", version.ref = "sqldelight" }
 baselineprofile = { id = "androidx.baselineprofile", version = "1.2.4" }
 kover = { id = "org.jetbrains.kotlinx.kover", version.ref = "kover" }
+dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 
