--- a/detekt.yml
+++ b/detekt.yml
@@ -279,8 +279,12 @@ naming:
   FunctionNaming:
     active: true
     excludes: ['**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/jsTest/**', '**/iosTest/**']
-    functionPattern: '[a-z][a-zA-Z0-9]*'
+    # Allow PascalCase for @Composable functions (Compose convention)
+    functionPattern: '([a-z][a-zA-Z0-9]*)|([A-Z][a-zA-Z0-9]*)'
     excludeClassPattern: '$^'
+    ignoreAnnotated:
+      - 'Composable'
+      - 'Preview'
   FunctionParameterNaming:
     active: true
     parameterPattern: '[a-z][A-Za-z0-9]*'
@@ -293,8 +297,7 @@ naming:
     active: true
     parameterPattern: '[a-z][A-Za-z0-9]*|_'
   MatchingDeclarationName:
-    active: true
-    mustBeFirst: true
+    active: false  # Allows multiple classes/objects per file
   MemberNameEqualsClassName:
     active: true
     ignoreOverridden: true
