--- a/webApp/src/jsMain/resources/manifest.json
+++ b/webApp/src/jsMain/resources/manifest.json
@@ -1,37 +1,68 @@
 {
     "name": "QR-SHIELD - QRishing Detector",
     "short_name": "QR-SHIELD",
-    "description": "Detect phishing attacks in QR codes. 100% offline, AI-powered security scanning running entirely in your browser.",
+    "description": "Detect phishing attacks in QR codes. 100% offline, AI-powered security scanning running entirely in your browser. Built with Kotlin Multiplatform.",
     "start_url": "./index.html?source=pwa",
     "scope": "./",
     "display": "standalone",
-    "orientation": "portrait-primary",
-    "background_color": "#0A0A0B",
-    "theme_color": "#7F52FF",
-    "lang": "en",
+    "display_override": [
+        "standalone",
+        "minimal-ui"
+    ],
+    "orientation": "any",
+    "background_color": "#0D1117",
+    "theme_color": "#6C5CE7",
+    "lang": "en-US",
+    "dir": "ltr",
     "categories": [
         "security",
         "utilities",
-        "productivity"
+        "productivity",
+        "developer-tools"
     ],
-    "id": "qr-shield-web",
+    "id": "qr-shield-web-pwa",
     "icons": [
         {
             "src": "assets/logo.svg",
             "sizes": "any",
-            "type": "image/svg+xml"
+            "type": "image/svg+xml",
+            "purpose": "any"
         },
         {
             "src": "assets/logo.svg",
             "sizes": "192x192",
             "type": "image/svg+xml",
-            "purpose": "any maskable"
+            "purpose": "any"
         },
         {
             "src": "assets/logo.svg",
             "sizes": "512x512",
             "type": "image/svg+xml",
-            "purpose": "any maskable"
+            "purpose": "any"
+        },
+        {
+            "src": "assets/logo.svg",
+            "sizes": "180x180",
+            "type": "image/svg+xml",
+            "purpose": "maskable"
+        },
+        {
+            "src": "assets/logo.svg",
+            "sizes": "167x167",
+            "type": "image/svg+xml",
+            "purpose": "maskable"
+        },
+        {
+            "src": "assets/logo.svg",
+            "sizes": "152x152",
+            "type": "image/svg+xml",
+            "purpose": "maskable"
+        },
+        {
+            "src": "assets/logo.svg",
+            "sizes": "120x120",
+            "type": "image/svg+xml",
+            "purpose": "maskable"
         }
     ],
     "screenshots": [
@@ -40,30 +71,51 @@
             "sizes": "1280x720",
             "type": "image/png",
             "form_factor": "wide",
-            "label": "QR-SHIELD Desktop View"
+            "label": "QR-SHIELD Desktop View - Premium Security Scanner"
         },
         {
             "src": "assets/screenshots/mobile.png",
             "sizes": "390x844",
             "type": "image/png",
             "form_factor": "narrow",
-            "label": "QR-SHIELD Mobile View"
+            "label": "QR-SHIELD Mobile View - Scan URLs Safely"
         }
     ],
     "shortcuts": [
         {
-            "name": "Scan URL",
+            "name": "Quick Scan",
             "short_name": "Scan",
-            "description": "Quickly analyze a URL for phishing",
+            "description": "Quickly analyze a URL for phishing threats",
+            "url": "./index.html?autofocus=true",
+            "icons": [
+                {
+                    "src": "assets/logo.svg",
+                    "sizes": "96x96",
+                    "type": "image/svg+xml"
+                }
+            ]
+        },
+        {
+            "name": "Demo Mode",
+            "short_name": "Demo",
+            "description": "Try sample URLs to see detection in action",
             "url": "./index.html?demo=true",
             "icons": [
                 {
                     "src": "assets/logo.svg",
-                    "sizes": "96x96"
+                    "sizes": "96x96",
+                    "type": "image/svg+xml"
                 }
             ]
         }
     ],
     "related_applications": [],
-    "prefer_related_applications": false
+    "prefer_related_applications": false,
+    "handle_links": "auto",
+    "launch_handler": {
+        "client_mode": "navigate-existing"
+    },
+    "edge_side_panel": {
+        "preferred_width": 480
+    }
 }
