--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,6 +14,7 @@ camerax = "1.4.1"
 navigation = "2.8.4"
 lifecycle = "2.8.7"
 glance = "1.1.1"
+konsist = "0.16.1"
 
 [libraries]
 # Kotlin
@@ -81,6 +82,7 @@ androidx-profileinstaller = { module = "androidx.profileinstaller:profileinstall
 # Desktop specific
 zxing-core = { module = "com.google.zxing:core", version = "3.5.2" }
 zxing-javase = { module = "com.google.zxing:javase", version = "3.5.2" }
+konsist = { module = "com.lemonappdev:konsist", version.ref = "konsist" }
 
 [plugins]
 kotlin-multiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
