--- a/detekt.yml
+++ b/detekt.yml
@@ -466,44 +466,22 @@ style:
   MagicNumber:
     active: true
     excludes: ['**/test/**', '**/androidTest/**', '**/commonTest/**', '**/jvmTest/**', '**/jsTest/**', '**/iosTest/**']
+    # Minimal set of allowed numbers - forces use of SecurityConstants and named constants
     ignoreNumbers:
       - '-1'
       - '0'
       - '1'
       - '2'
-      - '3'
-      - '4'
-      - '5'
-      - '6'
-      - '8'
-      - '10'
-      - '12'
-      - '14'
-      - '16'
-      - '20'
-      - '24'
-      - '30'
-      - '32'
-      - '40'
-      - '48'
-      - '50'
-      - '60'
-      - '80'
       - '100'
-      - '200'
-      - '250'
-      - '300'
-      - '400'
-      - '500'
       - '0.0'
-      - '0.1'
       - '0.5'
       - '1.0'
     ignoreHashCodeFunction: true
-    ignorePropertyDeclaration: true
+    # IMPORTANT: Set to false to force use of named constants for thresholds
+    ignorePropertyDeclaration: false
     ignoreLocalVariableDeclaration: false
-    ignoreConstantDeclaration: true
-    ignoreCompanionObjectPropertyDeclaration: true
+    ignoreConstantDeclaration: true  # Allow const val definitions
+    ignoreCompanionObjectPropertyDeclaration: true  # Allow companion object constants
     ignoreAnnotation: false
     ignoreNamedArgument: true
     ignoreEnums: true
