fix: Use jsBrowserDistribution for proper GitHub Pages deployment
The pages.yml workflow was using jsBrowserProductionWebpack which only
builds the JS bundle but doesn't include HTML, CSS, or assets.

Changed to jsBrowserDistribution which properly bundles:
- index.html
- styles.css
- assets/
- webApp.js
- manifest.json (PWA)
- sw.js (service worker)

This ensures the web app deploys correctly to GitHub Pages.

Also updated agent.md with detailed documentation of both CI fixes.

--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -31,7 +31,7 @@ jobs:
         cache: gradle
 
     - name: Build Web App
-      run: ./gradlew :webApp:jsBrowserProductionWebpack --no-daemon
+      run: ./gradlew :webApp:jsBrowserDistribution --no-daemon
 
     - name: Setup Pages
       uses: actions/configure-pages@v4
