--- a/.gitignore
+++ b/.gitignore
@@ -87,3 +87,13 @@ WebaPP_Light/
 
 # Compiled JS bundle (regenerated from Kotlin source)
 webApp/src/jsMain/resources/webApp.js
+QR-SHIELD.iconset/icon_512x512@2x.png
+QR-SHIELD.iconset/icon_512x512.png
+QR-SHIELD.iconset/icon_256x256@2x.png
+QR-SHIELD.iconset/icon_256x256.png
+QR-SHIELD.iconset/icon_128x128@2x.png
+QR-SHIELD.iconset/icon_128x128.png
+QR-SHIELD.iconset/icon_32x32@2x.png
+QR-SHIELD.iconset/icon_32x32.png
+QR-SHIELD.iconset/icon_16x16@2x.png
+QR-SHIELD.iconset/icon_16x16.png
