--- a/webApp/src/jsMain/resources/manifest.json
+++ b/webApp/src/jsMain/resources/manifest.json
@@ -23,6 +23,36 @@
     "id": "qr-shield-web-pwa",
     "icons": [
         {
+            "src": "assets/icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "assets/icon-512.png",
+            "sizes": "512x512",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "assets/icon-256.png",
+            "sizes": "256x256",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
+            "src": "assets/icon-256.png",
+            "sizes": "192x192",
+            "type": "image/png",
+            "purpose": "maskable"
+        },
+        {
+            "src": "assets/icon-128.png",
+            "sizes": "128x128",
+            "type": "image/png",
+            "purpose": "any"
+        },
+        {
             "src": "assets/logo.svg",
             "sizes": "any",
             "type": "image/svg+xml",
@@ -30,37 +60,7 @@
         },
         {
             "src": "assets/logo.svg",
-            "sizes": "192x192",
-            "type": "image/svg+xml",
-            "purpose": "any"
-        },
-        {
-            "src": "assets/logo.svg",
-            "sizes": "512x512",
-            "type": "image/svg+xml",
-            "purpose": "any"
-        },
-        {
-            "src": "assets/logo.svg",
             "sizes": "180x180",
-            "type": "image/svg+xml",
-            "purpose": "maskable"
-        },
-        {
-            "src": "assets/logo.svg",
-            "sizes": "167x167",
-            "type": "image/svg+xml",
-            "purpose": "maskable"
-        },
-        {
-            "src": "assets/logo.svg",
-            "sizes": "152x152",
-            "type": "image/svg+xml",
-            "purpose": "maskable"
-        },
-        {
-            "src": "assets/logo.svg",
-            "sizes": "120x120",
             "type": "image/svg+xml",
             "purpose": "maskable"
         }
