chore: Add androidApp/Androidapp.txt to .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -97,3 +97,4 @@ QR-SHIELD.iconset/icon_32x32@2x.png
 QR-SHIELD.iconset/icon_32x32.png
 QR-SHIELD.iconset/icon_16x16@2x.png
 QR-SHIELD.iconset/icon_16x16.png
+androidApp/Androidapp.txt
