--- a/androidApp/src/main/AndroidManifest.xml
+++ b/androidApp/src/main/AndroidManifest.xml
@@ -87,6 +87,17 @@
             android:shell="true"
             tools:targetApi="29" />
 
+        <!-- Per-app language support for Android 12 and below -->
+        <!-- This service allows AndroidX to persist app locale preferences -->
+        <service
+            android:name="androidx.appcompat.app.AppLocalesMetadataHolderService"
+            android:enabled="false"
+            android:exported="false">
+            <meta-data
+                android:name="autoStoreLocales"
+                android:value="true" />
+        </service>
+
     </application>
 
 </manifest>
